--- a/index.html
+++ b/index.html
@@ -118,31 +118,56 @@
         </div>
     </section>
 
-    <!-- Contact Section with Form -->
-    <section class="bg-dark text-white py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact Us</h2>
-            <form>
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="4" placeholder="Enter your message"></textarea>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-            </form>
+   <!-- Contact Section with Form -->
+<section class="bg-dark text-white py-5">
+    <div class="container">
+        <h2 class="text-center mb-4">Contact Us</h2>
+
+        <!-- Success Message (Initially Hidden) -->
+        <div id="contact-alert" class="alert alert-success text-center d-none" role="alert">
+            ✅ Thank you! Your message has been sent successfully.
         </div>
-    </section>
+
+        <form id="contact-form" onsubmit="showMessage(event)">
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                </div>
+                <div class="col-md-6">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+</section>
+
+<!-- JavaScript for Pop-up Message -->
+<script>
+    function showMessage(event) {
+        event.preventDefault(); // Prevent actual form submission
+
+        // Show the alert message
+        document.getElementById('contact-alert').classList.remove('d-none');
+
+        // Hide the message after 3 seconds
+        setTimeout(() => {
+            document.getElementById('contact-alert').classList.add('d-none');
+        }, 3000);
+
+        // Reset the form fields
+        document.getElementById('contact-form').reset();
+    }
+</script>
+
 
     <!-- Footer -->
     <footer class="text-center bg-secondary text-white py-3">
