--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://www.justdial.com/Allahabad/Electronic-Goods-Showrooms-in-Pvr-Cinema-Civil-Lines/nct-10185144" target="_blank">Stores</a></li>
+                            <li><a class="dropdown-item" href="https://pvpsquare.com/brands.php" target="_blank">Stores</a></li>
                             <li><a class="dropdown-item" href="https://www.pvrcinemas.com/offers" target="_blank">Offers</a></li>
                             <li><a class="dropdown-item" href="https://www.justdial.com/Vijayawada/Entertainment-Centres-in-Pvr-Cinemas-Labbipet/nct-10189510" target="_blank">Events</a></li>
                         </ul>
@@ -55,16 +55,14 @@
             </div>
         </div>
     </nav>
-
-    <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb">
+     <!-- Breadcrumb -->
+     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#home">Home</a></li>
             <li class="breadcrumb-item"><a href="#shops">Shops</a></li>
             <li class="breadcrumb-item active" aria-current="page">Featured Shops</li>
         </ol>
     </nav>
-
     <!-- Hero Section -->
     <section class="bg-light py-5 text-center">
         <div class="container">
@@ -85,8 +83,8 @@
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNbsZ9DaglQRQ4Ou8Q_BuoHcFflTs5jWtICw&s" class="card-img-top" alt="Shop 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Fashion Avenue</h5>
-                            <p class="card-text">Explore a wide range of stylish apparel and chic accessories to elevate your wardrobe.</p>
-                            <a href="https://www.flipkart.com/clothing-and-accessories/fashion-avenue~brand/pr?sid=clo" class="btn btn-primary" target="_blank">Visit Shop</a>
+                            <p class="card-text">Explore a wide range of stylish apparel and chic accessories.</p>
+                            <a href="#" class="btn btn-primary">Visit Shop</a>
                         </div>
                     </div>
                 </div>
@@ -97,8 +95,8 @@
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl-g8Wh6XyXqoPb710U7j2vcyH-2RdtKgOeQ&s" class="card-img-top" alt="Shop 2">
                         <div class="card-body text-center">
                             <h5 class="card-title">Gadget World</h5>
-                            <p class="card-text">Find amazing offers on cutting-edge electronics and must-have gadgets.</p>
-                            <a href="https://www.gadgetworld08.in/?srsltid=AfmBOor1-ZnWErIPoZc6BKZjcjahuqPCmiqCYUnEu8p0qv1PNHkkNNLo" class="btn btn-primary" target="_blank">Visit Shop</a>
+                            <p class="card-text">Find amazing offers on cutting-edge electronics and gadgets.</p>
+                            <a href="#" class="btn btn-primary">Visit Shop</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +108,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Food Court</h5>
                             <p class="card-text">Savor a wide variety of tasty meals and tempting snacks.</p>
-                            <a href="https://www.paradisefoodcourt.in/" class="btn btn-primary" target="_blank">Explore</a>
+                            <a href="#" class="btn btn-primary">Explore</a>
                         </div>
                     </div>
                 </div>
@@ -118,61 +116,60 @@
         </div>
     </section>
 
-   <!-- Contact Section with Form -->
-<section class="bg-dark text-white py-5">
-    <div class="container">
-        <h2 class="text-center mb-4">Contact Us</h2>
+    <!-- Contact Section with Form -->
+    <section id="contact" class="bg-dark text-white py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Contact Us</h2>
 
-        <!-- Success Message (Initially Hidden) -->
-        <div id="contact-alert" class="alert alert-success text-center d-none" role="alert">
-            ✅ Thank you! Your message has been sent successfully.
+            <!-- Success Message (Initially Hidden) -->
+            <div id="contact-alert" class="alert alert-success text-center d-none" role="alert">
+                ✅ Thank you! Your message has been sent successfully.
+            </div>
+
+            <form id="contact-form" onsubmit="showMessage(event)">
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
         </div>
-
-        <form id="contact-form" onsubmit="showMessage(event)">
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Enter your message" required></textarea>
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
-    </div>
-</section>
-
-<!-- JavaScript for Pop-up Message -->
-<script>
-    function showMessage(event) {
-        event.preventDefault(); // Prevent actual form submission
-
-        // Show the alert message
-        document.getElementById('contact-alert').classList.remove('d-none');
-
-        // Hide the message after 3 seconds
-        setTimeout(() => {
-            document.getElementById('contact-alert').classList.add('d-none');
-        }, 3000);
-
-        // Reset the form fields
-        document.getElementById('contact-form').reset();
-    }
-</script>
-
+    </section>
 
     <!-- Footer -->
     <footer class="text-center bg-secondary text-white py-3">
         <p>&copy; 2025 PVR Mall. All rights reserved.</p>
     </footer>
+
+    <!-- JavaScript for Pop-up Message -->
+    <script>
+        function showMessage(event) {
+            event.preventDefault(); // Prevent actual form submission
+
+            // Show the alert message
+            document.getElementById('contact-alert').classList.remove('d-none');
+
+            // Hide the message after 3 seconds
+            setTimeout(() => {
+                document.getElementById('contact-alert').classList.add('d-none');
+            }, 3000);
+
+            // Reset the form fields
+            document.getElementById('contact-form').reset();
+        }
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
